Feat:app version update api changes
