# storage/api-docs/api-docs.json
@@ -515,6 +515,56 @@
                     }
                 }
             }
+        },
+        "/appVersion": {
+            "post": {
+                "tags": [
+                    "Common"
+                ],
+                "summary": "Result status 1->stands for force update, 2->recommend to update, 0->Allready up to date",
+                "requestBody": {
+                    "description": "Pass current app version and type(iOS/Android)",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "version",
+                                    "type"
+                                ],
+                                "properties": {
+                                    "version": {
+                                        "type": "string",
+                                        "example": "1.6"
+                                    },
+                                    "type": {
+                                        "type": "string",
+                                        "example": "iOS"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "result fetched",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {}
+                ]
+            }
         }
     },
     "components": {
